@@ -39,6 +39,212 @@
 
 namespace CoreArray
 {
+	/// Template for the conversion of 2-bit array
+	template<typename MEM_TYPE> struct COREARRAY_DLL_LOCAL BIT1_CONV
+	{
+		inline static MEM_TYPE* Decode(const C_UInt8 *s, size_t n_byte, MEM_TYPE *p)
+		{
+			for (; n_byte > 0; n_byte--)
+			{
+				C_UInt8 Ch = *s++;
+				p[0] = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
+				p[1] = VAL_CONV_FROM_U8(MEM_TYPE, (Ch >> 1) & 0x01);
+				p[2] = VAL_CONV_FROM_U8(MEM_TYPE, (Ch >> 2) & 0x01);
+				p[3] = VAL_CONV_FROM_U8(MEM_TYPE, (Ch >> 3) & 0x01);
+				p[4] = VAL_CONV_FROM_U8(MEM_TYPE, (Ch >> 4) & 0x01);
+				p[5] = VAL_CONV_FROM_U8(MEM_TYPE, (Ch >> 5) & 0x01);
+				p[6] = VAL_CONV_FROM_U8(MEM_TYPE, (Ch >> 6) & 0x01);
+				p[7] = VAL_CONV_FROM_U8(MEM_TYPE, Ch >> 7);
+				p += 8;
+			}
+			return p;
+		}
+
+		inline static MEM_TYPE* Decode2(const C_UInt8 *s, size_t n_byte,
+			MEM_TYPE *p, const C_BOOL sel[])
+		{
+			for (; n_byte > 0; n_byte--)
+			{
+				C_UInt8 Ch = *s++;
+				if (*sel++) *p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
+				Ch >>= 1;
+				if (*sel++) *p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
+				Ch >>= 1;
+				if (*sel++) *p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
+				Ch >>= 1;
+				if (*sel++) *p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
+				Ch >>= 1;
+				if (*sel++) *p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
+				Ch >>= 1;
+				if (*sel++) *p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
+				Ch >>= 1;
+				if (*sel++) *p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
+				Ch >>= 1;
+				if (*sel++) *p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch);
+			}
+			return p;
+		}
+
+		inline static const MEM_TYPE *Encode(const MEM_TYPE *s, C_UInt8 *p,
+			size_t n_byte)
+		{
+			for (; n_byte > 0; n_byte--)
+			{
+				*p++ = (VAL_CONV_TO_U8(MEM_TYPE, s[0]) & 0x01) |
+					((VAL_CONV_TO_U8(MEM_TYPE, s[1]) & 0x01) << 1) |
+					((VAL_CONV_TO_U8(MEM_TYPE, s[2]) & 0x01) << 2) |
+					((VAL_CONV_TO_U8(MEM_TYPE, s[3]) & 0x01) << 3) |
+					((VAL_CONV_TO_U8(MEM_TYPE, s[4]) & 0x01) << 4) |
+					((VAL_CONV_TO_U8(MEM_TYPE, s[5]) & 0x01) << 5) |
+					((VAL_CONV_TO_U8(MEM_TYPE, s[6]) & 0x01) << 6) |
+					((VAL_CONV_TO_U8(MEM_TYPE, s[7]) & 0x01) << 7);
+				s += 8;
+			}
+			return s;
+		}
+	};
+
+
+#ifdef COREARRAY_SIMD_SSE2
+
+	#define WRITE_BIT1_DECODE    \
+		{ \
+			C_UInt8 Ch = *s++; \
+			p[0] = (Ch & 0x01); p[1] = (Ch >> 1) & 0x01; \
+			p[2] = (Ch >> 2) & 0x01; p[3] = (Ch >> 3) & 0x01; \
+			p[4] = (Ch >> 4) & 0x01; p[5] = (Ch >> 5) & 0x01; \
+			p[6] = (Ch >> 6) & 0x01; p[7] = (Ch >> 7); \
+			p += 8; \
+		}
+
+	#define WRITE_BIT1_SEL_DECODE    \
+		{ \
+			C_UInt8 Ch = *s++; \
+			if (*sel++) *p++ = Ch & 0x01; \
+			Ch >>= 1; if (*sel++) *p++ = Ch & 0x01; \
+			Ch >>= 1; if (*sel++) *p++ = Ch & 0x01; \
+			Ch >>= 1; if (*sel++) *p++ = Ch & 0x01; \
+			Ch >>= 1; if (*sel++) *p++ = Ch & 0x01; \
+			Ch >>= 1; if (*sel++) *p++ = Ch & 0x01; \
+			Ch >>= 1; if (*sel++) *p++ = Ch & 0x01; \
+			Ch >>= 1; if (*sel++) *p++ = Ch; \
+		}
+
+	#define WRITE_BIT1_ENCODE    \
+		{ \
+			*p++ = (C_UInt8(s[0]) & 0x01) | ((C_UInt8(s[1]) & 0x01) << 1) | \
+				((C_UInt8(s[2]) & 0x01) << 2) | ((C_UInt8(s[3]) & 0x01) << 3) | \
+				((C_UInt8(s[4]) & 0x01) << 4) | ((C_UInt8(s[5]) & 0x01) << 5) | \
+				((C_UInt8(s[6]) & 0x01) << 6) | ((C_UInt8(s[7]) & 0x01) << 7); \
+			s += 8; \
+		}
+
+
+	static const __m128i BIT1_REP_x01 = _mm_set1_epi8(0x01);
+
+	#define WRITE_BIT1_DECODE_B2_UINT8(val)   \
+		{ \
+			__m128i v = _mm_set1_epi16(val); \
+			__m128i w1 = _mm_unpacklo_epi8(v, _mm_srli_epi16(v,1)); \
+			__m128i w2 = _mm_unpacklo_epi8(_mm_srli_epi16(v,2), _mm_srli_epi16(v,3)); \
+			__m128i w3 = _mm_unpacklo_epi8(_mm_srli_epi16(v,4), _mm_srli_epi16(v,5)); \
+			__m128i w4 = _mm_unpacklo_epi8(_mm_srli_epi16(v,6), _mm_srli_epi16(v,7)); \
+			__m128i v1 = _mm_unpacklo_epi16(w1, w2); \
+			__m128i v2 = _mm_unpacklo_epi16(w3, w4); \
+			_mm_storeu_si128((__m128i*)p, _mm_unpacklo_epi32(v1, v2) & BIT1_REP_x01); \
+		}
+
+
+	template<> struct COREARRAY_DLL_LOCAL BIT1_CONV<C_UInt8>
+	{
+		inline static C_UInt8* Decode(const C_UInt8 *s, size_t n_byte, C_UInt8 *p)
+		{
+			for (; n_byte >= 2; n_byte-=2)
+			{
+				WRITE_BIT1_DECODE_B2_UINT8(*((const C_Int16*)s))
+				s += 2; p += 16;
+			}
+			for (; n_byte > 0; n_byte--) WRITE_BIT1_DECODE
+			return p;
+		}
+
+		inline static C_UInt8* Decode2(const C_UInt8 *s, size_t n_byte, C_UInt8 *p,
+			const C_BOOL sel[])
+		{
+			for (; n_byte >= 2; n_byte -= 2)
+			{
+				__m128i sv = _mm_loadu_si128((__m128i const*)sel);
+				sv = _mm_cmpeq_epi8(sv, _mm_setzero_si128());
+				int sv16 = _mm_movemask_epi8(sv);
+				if (sv16 == 0)  // all selected
+				{
+					WRITE_BIT1_DECODE_B2_UINT8(*((const C_Int16*)s))
+					s += 2; p += 16; sel += 16;
+				} else if (sv16 == 0xFFFF)  // not selected
+				{
+					s += 2; sel += 16;
+				} else {
+					WRITE_BIT1_SEL_DECODE
+					WRITE_BIT1_SEL_DECODE
+					WRITE_BIT1_SEL_DECODE
+					WRITE_BIT1_SEL_DECODE
+				}
+			}
+			for (; n_byte > 0; n_byte--) WRITE_BIT1_SEL_DECODE
+			return p;
+		}
+
+		inline static const C_UInt8 *Encode(const C_UInt8 *s, C_UInt8 *p,
+			size_t n_byte)
+		{
+			for (; n_byte >= 8; n_byte-=8)
+			{
+				C_UInt16 r1 = _mm_movemask_epi8(_mm_slli_epi32(
+					_mm_loadu_si128((__m128i const*)s), 7));
+				C_UInt16 r2 = _mm_movemask_epi8(_mm_slli_epi32(
+					_mm_loadu_si128((__m128i const*)(s+16)), 7));
+				C_UInt16 r3 = _mm_movemask_epi8(_mm_slli_epi32(
+					_mm_loadu_si128((__m128i const*)(s+32)), 7));
+				C_UInt16 r4 = _mm_movemask_epi8(_mm_slli_epi32(
+					_mm_loadu_si128((__m128i const*)(s+48)), 7));
+				*((C_UInt64*)p) = r1 | (C_UInt64(r2) << 16) |
+					(C_UInt64(r3) << 32) | (C_UInt64(r4) << 48);
+				p += 8; s += 64;
+			}
+			for (; n_byte >= 2; n_byte-=2)
+			{
+				*((C_Int16*)p) = _mm_movemask_epi8(_mm_slli_epi32(
+					_mm_loadu_si128((__m128i const*)s), 7));
+				p += 2; s += 16;
+			}
+			for (; n_byte > 0; n_byte--) WRITE_BIT1_ENCODE
+			return s;
+		}
+	};
+
+
+	template<> struct COREARRAY_DLL_LOCAL BIT1_CONV<C_Int8>
+	{
+		inline static C_Int8* Decode(const C_UInt8 *s, size_t n_byte, C_Int8 *p)
+		{
+			return (C_Int8*)BIT1_CONV<C_UInt8>::Decode(s, n_byte, (C_UInt8*)p);
+		}
+		inline static C_Int8* Decode2(const C_UInt8 *s, size_t n_byte, C_Int8 *p,
+			const C_BOOL sel[])
+		{
+			return (C_Int8*)BIT1_CONV<C_UInt8>::Decode2(s, n_byte, (C_UInt8*)p, sel);
+		}
+		inline static const C_Int8 *Encode(const C_Int8 *s, C_UInt8 *p,
+			size_t n_byte)
+		{
+			return (C_Int8*)BIT1_CONV<C_UInt8>::Encode((C_UInt8*)s, p, n_byte);
+		}
+	};
+
+
+#endif
+
+
 	// =====================================================================
 	// 1-bit unsigned integer functions for allocator
 
@@ -54,7 +260,7 @@ namespace CoreArray
 		static MEM_TYPE *Read(CdIterator &I, MEM_TYPE *p, ssize_t n)
 		{
 			// buffer
-			C_UInt8 Buffer[MEMORY_BUFFER_SIZE];
+			C_UInt8 Buffer[MEMORY_BUFFER_SIZE] COREARRAY_SIMD_ATTR_ALIGN;
 			SIZE64 pI = I.Ptr;
 			I.Ptr += n;
 
@@ -80,20 +286,7 @@ namespace CoreArray
 				I.Allocator->ReadData(Buffer, L);
 				n -= (L << 3);
 				// extract bits
-				C_UInt8 *s = Buffer;
-				for (; L > 0; L--)
-				{
-					C_UInt8 Ch = *s++;
-					p[0] = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
-					p[1] = VAL_CONV_FROM_U8(MEM_TYPE, (Ch >> 1) & 0x01);
-					p[2] = VAL_CONV_FROM_U8(MEM_TYPE, (Ch >> 2) & 0x01);
-					p[3] = VAL_CONV_FROM_U8(MEM_TYPE, (Ch >> 3) & 0x01);
-					p[4] = VAL_CONV_FROM_U8(MEM_TYPE, (Ch >> 4) & 0x01);
-					p[5] = VAL_CONV_FROM_U8(MEM_TYPE, (Ch >> 5) & 0x01);
-					p[6] = VAL_CONV_FROM_U8(MEM_TYPE, (Ch >> 6) & 0x01);
-					p[7] = VAL_CONV_FROM_U8(MEM_TYPE, Ch >> 7);
-					p += 8;
-				}
+				p = BIT1_CONV<MEM_TYPE>::Decode(Buffer, L, p);
 			}
 
 			// tail
@@ -103,7 +296,6 @@ namespace CoreArray
 				for (; n > 0; n--, Ch >>= 1)
 					*p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
 			}
-
 			return p;
 		}
 
@@ -112,7 +304,7 @@ namespace CoreArray
 			const C_BOOL sel[])
 		{
 			// buffer
-			C_UInt8 Buffer[MEMORY_BUFFER_SIZE];
+			C_UInt8 Buffer[MEMORY_BUFFER_SIZE] COREARRAY_SIMD_ATTR_ALIGN;
 			SIZE64 pI = I.Ptr;
 			I.Ptr += n;
 
@@ -141,34 +333,8 @@ namespace CoreArray
 				I.Allocator->ReadData(Buffer, L);
 				n -= (L << 3);
 				// extract bits
-				C_UInt8 *s = Buffer;
-				for (; L > 0; L--)
-				{
-					C_UInt8 Ch = *s++;
-					if (*sel++)
-						*p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
-					Ch >>= 1;
-					if (*sel++)
-						*p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
-					Ch >>= 1;
-					if (*sel++)
-						*p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
-					Ch >>= 1;
-					if (*sel++)
-						*p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
-					Ch >>= 1;
-					if (*sel++)
-						*p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
-					Ch >>= 1;
-					if (*sel++)
-						*p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
-					Ch >>= 1;
-					if (*sel++)
-						*p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
-					Ch >>= 1;
-					if (*sel++)
-						*p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch);
-				}
+				p = BIT1_CONV<MEM_TYPE>::Decode2(Buffer, L, p, sel);
+				sel += (L << 3);
 			}
 
 			// tail
@@ -181,7 +347,6 @@ namespace CoreArray
 						*p++ = VAL_CONV_FROM_U8(MEM_TYPE, Ch & 0x01);
 				}
 			}
-
 			return p;
 		}
 
@@ -213,7 +378,6 @@ namespace CoreArray
 				I.Allocator->SetPosition(I.Allocator->Position() - 1);
 				ss.WriteBit(Ch >> ss.Offset, 8 - ss.Offset);
 			}
-
 			return p;
 		}
 
@@ -256,23 +420,14 @@ namespace CoreArray
 			}
 
 			// buffer writing with bytes
-			C_UInt8 Buffer[MEMORY_BUFFER_SIZE];
+			C_UInt8 Buffer[MEMORY_BUFFER_SIZE] COREARRAY_SIMD_ATTR_ALIGN;
 			while (n >= 8)
 			{
-				ssize_t nn = 0;
-				for (C_UInt8 *s=Buffer; (n >= 8) && (nn < MEMORY_BUFFER_SIZE); n-=8, nn++)
-				{
-					*s++ = (VAL_CONV_TO_U8(MEM_TYPE, p[0]) & 0x01) |
-						((VAL_CONV_TO_U8(MEM_TYPE, p[1]) & 0x01) << 1) |
-						((VAL_CONV_TO_U8(MEM_TYPE, p[2]) & 0x01) << 2) |
-						((VAL_CONV_TO_U8(MEM_TYPE, p[3]) & 0x01) << 3) |
-						((VAL_CONV_TO_U8(MEM_TYPE, p[4]) & 0x01) << 4) |
-						((VAL_CONV_TO_U8(MEM_TYPE, p[5]) & 0x01) << 5) |
-						((VAL_CONV_TO_U8(MEM_TYPE, p[6]) & 0x01) << 6) |
-						((VAL_CONV_TO_U8(MEM_TYPE, p[7]) & 0x01) << 7);
-					p += 8;
-				}
+				size_t nn = n >> 3;
+				if (nn > MEMORY_BUFFER_SIZE) nn = MEMORY_BUFFER_SIZE;
+				p = BIT1_CONV<MEM_TYPE>::Encode(p, Buffer, nn);
 				I.Allocator->WriteData(Buffer, nn);
+				n -= (nn << 3);
 			}
 
 			for (; n > 0; n--)
@@ -289,7 +444,6 @@ namespace CoreArray
 				if (ar)
 					I.Handler->PipeInfo()->Remainder().Size = 0;
 			}
-
 			return p;
 		}
 	};
